--- a/launch.html
+++ b/launch.html
@@ -10,15 +10,18 @@
   <h1 align = "center">Игра быки и коровы</h1>
   <hr>
   <br>
-  <details>
-  <summary>Как играть?</summary>
+  <div align = "center">
+  <a href ="" class="spoiler_link">Как играть?</a>
+  <div class="spoiler_body" align = "left">
   <p class = "rules">Быки и коровы - логическая игра для двоих игроков. Для неё достаточно иметь листок бумаги и ручку, свободное время и немного везения. Как правило, такое время находится у школьников и студентов. Но мне, вашему покорному слуге, не довелось в свои годы узнать эту забаву. Хотя почему бы не размять своё серое вещество на досуге? Это неплохая тренировка для ума, не требующая сильного напряжения, и как развлечение вполне себя оправдывает.
     <br><br>В своём классическом варианте правила очень просты и не притязательны. Играют два человека, каждый загадывает в тайне от оппонента четыре цифры без повторений. Например, это может быть число 0834. Ноль является также цифрой и вполне может быть на первом месте.
     <br><br>Далее игроки по очереди делают ходы, то есть пытаются угадать задуманное противником число. Но спрашивать они обязаны так же в виде четырёхзначного числа. К примеру нас спросят: "Твоё число 3094?". В ответ же мы должны сообщить количество быков и коров. Бык - это цифра, которая есть в нашем загаданном числе и находится на той же позиции. А корова - это цифра, которая так же есть в нашем числе, но находится не на своём месте. В нашем случае получаем две коровы, это цифры 3 и 0, и один бык, это 4. Теперь будем спрашивать мы, и так далее, до тех пор, пока кто-либо не разгадает полностью число. То есть в ответе он получит четыре быка. На картинке показан пример игры. Времени на одну партию требуется совсем немного. На практике обычно требуется от 5 до 8 ходов, но есть уникумы, которые умудряются и за три хода победить. Конечно в таком успехе есть немалая доля везения.
   </p>
-</details>
+</div>
+</div>
   <h2 align = "center">Попробуй сам!</h2>
-  <p align = "center">Всё очень просто. Просто введи своё число и нажми Enter</p>
+  <p align = "center">Всё очень просто. Просто введи своё число и нажми Enter.</p>
+  <p align = "center">Если хочешь начать заново, нажми "Новая игра".</p>
   <div class = "flex-container">
     <div class = "sideitem">
       <div class = "item form"><input type = number placeholder="Введите число"></div>
